objects/CoxTreatmentQA__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QID__c</fullName>
        <label>QID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Guided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Guided</label>
        <type>Checkbox</type>
    </fields>
    <label>CoxTreatmentQA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoxTreatmentQAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>